--- a/front/src/components/index/style.css
+++ b/front/src/components/index/style.css
@@ -1,12 +1,6 @@
-thead h1  {
-    
-    
-    
-    
-    
+.description {
     width: fit-content;
     margin: 80px auto;
     text-align: center;
-    
-
+    width:1200px;
 }
