--- a/front/src/components/header/style.css
+++ b/front/src/components/header/style.css
@@ -1,6 +1,6 @@
 header {
     display: flex;
-    background: #b1aaaa;
+    background-image: url();
     border-bottom: 1px solid #999;
     justify-content: space-between;
     padding:5px 50px;
@@ -14,13 +14,14 @@ header .LogoGroup {
 
 header .LogoGroup h1 {
     display:flex;
-    width:100%;
+    width:100;
     font-size:15px;
     font-weight: bolder;
 }
 
 header .LogoGroup img {
     max-height: 40px;
+    padding:15px 0px;
     
     
 }
