--- a/front/src/components/index/style.css
+++ b/front/src/components/index/style.css
@@ -1,6 +1,11 @@
 .description {
     width: fit-content;
-    margin: 80px auto;
+    margin: 40px auto;
     text-align: center;
-    width:1200px;
+    width:1000px;
+    font-weight: bold;
+    font-size: 23px;
+    font-style:oblique;
+    
+    
 }
