--- a/front/src/components/header/style.css
+++ b/front/src/components/header/style.css
@@ -1,6 +1,6 @@
 header {
     display: flex;
-    background-image: url();
+    background-image: url("fire.jpg");
     border-bottom: 1px solid #999;
     justify-content: space-between;
     padding:5px 50px;
@@ -20,8 +20,9 @@ header .LogoGroup h1 {
 }
 
 header .LogoGroup img {
-    max-height: 40px;
-    padding:15px 0px;
+    height: 67px;
+    width: 67px;
+    padding:10px 0px;
     
     
 }
