--- a/front/src/components/news/newslist.css
+++ b/front/src/components/news/newslist.css
@@ -7,7 +7,8 @@
     display:grid;
     grid-template-columns: 1fr 1fr 4fr;
     gap:10px;
-    
+    border-bottom: 1px solid #eee;
+    padding: 15px 0;
 }
 
 .film-list .film-card .poster img{
